# reed-solomon-simd

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/: quick-comparison.rs  test-random-roundtrips.rs
src/: algorithm.md  engine.rs  lib.rs  reed_solomon.rs  test_util.rs
src/engine/: engine_avx2.rs  engine_default.rs  engine_default_x86.rs  engine_naive.rs  engine_neon.rs  engine_nosimd.rs  engine_ssse3.rs  fwht.rs  tables.rs
src/rate/: rate_default.rs
