[package]
name = "reed-solomon-simd"
version = "2.2.2"
license = "MIT AND BSD-3-Clause"
description = "Reed-Solomon coding with O(n log n) complexity. Leverages SIMD instructions on x86(-64) and AArch64."
repository = "https://github.com/AndersTrier/reed-solomon-simd"
keywords = [ "erasure", "reed-solomon", "Leopard-RS" ]
categories = [ "algorithms", "encoding" ]
edition = "2021"

include = [
    "/benches",
    "/src",
    "LICENSE",
    "README.md",
    "build.rs",
]

[dependencies]
fixedbitset = "0.4.0"
once_cell = "1.8.0"

[build-dependencies]
readme-rustdocifier = "0.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }
hex = "0.4.3"
rand = "0.8.4"
rand_chacha = "0.3.1"
sha2 = "0.10.0"

# These are only for `examples/quick-comparison.rs`.
reed-solomon-16 = "0.1.0"
reed-solomon-erasure = { version = "6.0.0", features = [ "simd-accel" ] }
reed-solomon-novelpoly = "2.0.0"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
